# SourceXtractorDemoPlugin

./: .travis.yml  CMakeLists.txt  README.md
.travis/: build-rpm.sh
Petrosian/: CMakeLists.txt
Petrosian/Petrosian/: PetrosianConfig.h  PetrosianPlugin.h
Petrosian/Petrosian/PetrosianPhotometry/: PetrosianPhotometry.h  PetrosianPhotometryArray.h  PetrosianPhotometryArrayTask.h  PetrosianPhotometryTask.h  PetrosianPhotometryTaskFactory.h
Petrosian/Petrosian/PetrosianRadius/: PetrosianRadius.h  PetrosianRadiusTask.h  PetrosianRadiusTaskFactory.h
Petrosian/src/lib/: PetrosianConfig.cpp  PetrosianPlugin.cpp
Petrosian/src/lib/PetrosianPhotometry/: PetrosianPhotometry.cpp  PetrosianPhotometryArray.cpp  PetrosianPhotometryArrayTask.cpp  PetrosianPhotometryTask.cpp  PetrosianPhotometryTaskFactory.cpp
Petrosian/src/lib/PetrosianRadius/: PetrosianRadius.cpp  PetrosianRadiusTask.cpp  PetrosianRadiusTaskFactory.cpp
